Paint MessageView focus ring on top of children.

Focus ring around MessageView should be painted on top of all the
children.

TEST=manual
BUG=887366

Change-Id: I5667aff33196a5f3f8792b4e936e7da1cdda1057
Reviewed-on: https://chromium-review.googlesource.com/1255750
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595843}
Former-commit-id: 580f31e2ea4b30c1b780be6975a218f5b430d7bd